--- a/aulas/aula014ex/ex017/style.css
+++ b/aulas/aula014ex/ex017/style.css
@@ -19,11 +19,21 @@ section{
     margin: auto;
     background-color: white;
     width: 500px;
+    height: 250px;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 2px 2px 3px rgba(46, 46, 46, 0.397);
 }
 
+#principal{
+    width: 150px;
+    margin: auto;
+}
+
+#lista{
+    width: 150px;
+    margin: auto;
+}
 
 footer{
     text-align: center;
