--- a/aulas/aula014ex/ex017/style.css
+++ b/aulas/aula014ex/ex017/style.css
@@ -14,6 +14,10 @@ header{
     text-shadow: 2px 2px 3px rgba(46, 46, 46, 0.178);
 }
 
+select{
+    display: block;
+    margin: auto;
+}
 
 section{
     margin: auto;
@@ -25,10 +29,6 @@ section{
     box-shadow: 2px 2px 3px rgba(46, 46, 46, 0.397);
 }
 
-#principal{
-    width: 150px;
-    margin: auto;
-}
 
 #lista{
     width: 150px;
